Fix clearing button overflowing the input phrase

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,6 @@ body {
   position: relative;
   width: 300px;
   height: 60px;
-  background: #f00;
   left: 60px;
   display: flex;
   justify-content: center;
@@ -83,7 +82,7 @@ body {
   border: none;
   outline: none;
   font-size: 18px;
-  padding-right: 10px;
+  padding-right: 30px;
 }
 
 .clear {
